[tool.poetry]
name = "unchanging-ink"
version = "0.1.0"
description = ""
authors = ["Henryk Plötz <henryk@ploetzli.ch>"]


[tool.poetry.dependencies]
python = "^3.8"
sanic = "^22.3.2"
pynacl = "^1.4.0"
databases = {extras = ["postgresql"], version = "^0.5.5"}
SQLAlchemy-Utils = "^0.38.2"
ujson = "^5.2.0"
orjson = "^3.5.1"
aioredis = { version = "^2.0.1" }

psycopg2 = { version = "^2.8.6", optional = true }
alembic = { version = "^1.5.8", optional = true }
redis = { version = "^3.5.3", optional = true }
sentry-sdk = {version = "^1.5.11", optional = true}
pytest-sanic = {version = "^1.9.1", optional = true}
black = {version = "^22.3.0", optional = true}
isort = {version = "^5.10.1", optional = true}
pytest = {version = "^7.1.2", optional = true}
pytest-cov = {version = "^3.0.0", optional = true}
coverage = {version = "^6.3.2", optional = true, extras = ["toml"]}

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.8.0"

[tool.poetry.extras]
worker = [ "psycopg2", "alembic", "redis", "sentry-sdk" ]
test = [ "pytest", "pytest-sanic", "coverage", "pytest-cov" ]
dev = [ "black", "isort" ]

[tool.poetry.scripts]
unchanging-ink = "unchanging_ink.server:init"
unchanging-ink_worker = "unchanging_ink.worker:main"
unchanging-ink_create_tables = "unchanging_ink.create_tables:main"

[tool.coverage.run]
branch = true
omit = ["*/tests/*"]

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
