[tool.poetry]
name = "unchanging-ink"
version = "0.1.0"
description = ""
authors = ["Henryk Plötz <henryk@ploetzli.ch>"]


[tool.poetry.dependencies]
python = "^3.12"
sanic = { version = "23.12.*", extras=["ext"] }
pynacl = "^1.4.0"
sqlalchemy = { version="^1.4", extras=["asyncio"] }
SQLAlchemy-Utils = "^0.38.2"
ujson = "^5.2.0"
orjson = "^3.5.1"

psycopg2 = { version = "^2.8.6", optional = true }
alembic = { version = "^1.5.8", optional = true }
redis = ">=4.2.0rc1"
sentry-sdk = {version = "^1.5.11", optional = true}
black = {version = "^24.4.0", optional = true}
isort = {version = "^5.10.1", optional = true}
pytest = {version = "^8.0.0", optional = true}
pytest-cov = {version = "^5.0.0", optional = true}
coverage = {version = "^7.0.4", optional = true, extras = ["toml"]}
pytest-redis = {version = "^3.1.0", optional = true}
asyncpg = "^0.29.0"
cbor2 = "^5.4.3"
python-dateutil = {version = "^2.8.2", optional = true}
pytest-asyncio = {version = "^0.23.7", optional = true}
sanic-testing = {version = "^23.12.0", optional = true}
pytest-async-sqlalchemy = {version = "^0.2.0", optional = true}
aiosqlite = {version = "^0.20.0", optional = true}
accept-types = "^0.4.1"
pytest-xdist = {version = "^3.6.0", extras = ["psutil"], optional = true}
structlog = "^24.2.0"
rich = "^13.0.1"
colorama = { version="^0.4.6", markers = "sys_platform == 'win32'" }
setuptools = "^70.0.0"

[tool.poetry.dev-dependencies]
black = "^24.4.0"
isort = "^5.8.0"

[tool.poetry.extras]
worker = [ "psycopg2", "alembic", "redis", "sentry-sdk" ]
test = [ "pytest", "pytest-asyncio", "coverage", "pytest-cov", "pytest-redis", "python-dateutil", "sanic-testing", "pytest-async-sqlalchemy", "aiosqlite", "pytest-xdist" ]
dev = [ "black", "isort" ]

[tool.poetry.scripts]
unchanging-ink_worker = "unchanging_ink.worker:main"
unchanging-ink_create_tables = "unchanging_ink.create_tables:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
omit = ["*/tests/*"]

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
